Consistently use all scripts